# e3sm-tools

./: .gitmodules  CMakeLists.txt  README.md  cmake_macros
conda/ci/: linux_64.yaml
conda/recipe/: build.sh  meta.yaml
tools/cdscan_replacement/: cdscan_replacement
tools/cube_to_target/: CMakeLists.txt  src
tools/gen_domain/: CMakeLists.txt  gen_domain.F90
tools/interpinic/: CMakeLists.txt  src
tools/mksurfdata_map/: CMakeLists.txt  src
tools/squadgen/: CMakeLists.txt
